--- a/src/Aktabook.Bus/appsettings.Example.json
+++ b/src/Aktabook.Bus/appsettings.Example.json
@@ -60,5 +60,31 @@
     "Properties": {
       "Application": "Aktabook"
     }
+  },
+  "ReadinessListenerOptions": {
+    "Name": "Readiness Endpoint",
+    "Tags": [
+      "readiness"
+    ],
+    "IpAddress": "127.0.0.1",
+    "Port": 23514,
+    "Interval": "00:00:03"
+  },
+  "LivenessListenerOptions": {
+    "Name": "Liveness Endpoint",
+    "Tags": [
+      "liveness"
+    ],
+    "IpAddress": "127.0.0.1",
+    "Port": 23515,
+    "Interval": "00:00:03"
+  },
+  "RequesterServiceDbContext": {
+    "SqlServerConfig": {
+    }
+  },
+  "RequesterServiceBus": {
+    "RabbitMQConnectionOptions": {
+    }
   }
 }
