--- a/src/Aktabook.PublicApi.V1/appsettings.Example.json
+++ b/src/Aktabook.PublicApi.V1/appsettings.Example.json
@@ -64,7 +64,10 @@
   "AllowedHosts": "*",
   "RequesterServiceDbContext": {
     "SqlServerConfig": {
-      "InitialCatalog": "Aktabook-PublicApi-V1"
+      "DataSource": "",
+      "InitialCatalog": "",
+      "UserID": "",
+      "Password": ""
     }
   }
 }
