--- a/src/Aktabook.Bus.Common/Aktabook.Bus.Common.csproj
+++ b/src/Aktabook.Bus.Common/Aktabook.Bus.Common.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.2"/>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.2"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0"/>
     <PackageReference Include="NServiceBus" Version="7.7.4"/>
     <PackageReference Include="NServiceBus.Json" Version="2.0.0"/>
   </ItemGroup>
