--- a/src/Aktabook.Bus/appsettings.json
+++ b/src/Aktabook.Bus/appsettings.json
@@ -39,5 +39,23 @@
   "AllowedHosts": "*",
   "OpenLibraryClientOptions": {
     "Host": "https://openlibrary.org"
+  },
+  "ReadinessListenerOptions": {
+    "Name": "Readiness Endpoint",
+    "Tags": [
+      "readiness"
+    ],
+    "IpAddress": "127.0.0.1",
+    "Port": 23514,
+    "Interval": "00:00:03"
+  },
+  "LivenessListenerOptions": {
+    "Name": "Liveness Endpoint",
+    "Tags": [
+      "liveness"
+    ],
+    "IpAddress": "127.0.0.1",
+    "Port": 23515,
+    "Interval": "00:00:03"
   }
 }
