--- a/.github/workflows/composite/dotnet-build/action.yml
+++ b/.github/workflows/composite/dotnet-build/action.yml
@@ -1,3 +1,9 @@
+# Copyright (c) 2022 Omar Boukli-Hacene. All rights reserved.
+# Distributed under an MIT-style license that can be
+# found in the LICENSE file.
+
+# SPDX-License-Identifier: MIT
+
 name: Build
 description: Build .NET solution and cache restored NuGet packages
 
