--- a/test/Aktabook.Services.BookInfoRequestService.IntegrationTest/Aktabook.Services.BookInfoRequestService.IntegrationTest.csproj
+++ b/test/Aktabook.Services.BookInfoRequestService.IntegrationTest/Aktabook.Services.BookInfoRequestService.IntegrationTest.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Aktabook.Services.BookInfoRequestService\Aktabook.Services.BookInfoRequestService.csproj"/>
-    <ProjectReference Include="..\Aktabook.Data.IntegrationTest.Common\Aktabook.Data.IntegrationTest.Common.csproj"/>
+    <ProjectReference Include="..\Aktabook.Data.Testing\Aktabook.Data.Testing.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
