--- a/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
+++ b/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
@@ -29,7 +29,7 @@
     <ProjectReference Include="..\..\src\Aktabook.Application\Aktabook.Application.csproj"/>
     <ProjectReference Include="..\..\src\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
     <ProjectReference Include="..\..\src\Aktabook.Infrastructure.Configuration\Aktabook.Infrastructure.Configuration.csproj"/>
-    <ProjectReference Include="..\Aktabook.Data.IntegrationTest.Common\Aktabook.Data.IntegrationTest.Common.csproj"/>
+    <ProjectReference Include="..\Aktabook.Data.Testing\Aktabook.Data.Testing.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
