--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2"/>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.0"/>
     <PackageReference Include="MediatR" Version="10.0.1"/>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
     <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0"/>
