--- a/src/Aktabook.Bus/appsettings.json
+++ b/src/Aktabook.Bus/appsettings.json
@@ -57,5 +57,8 @@
     "IpAddress": "127.0.0.1",
     "Port": 23515,
     "Interval": "00:00:03"
+  },
+  "ProcessIdFileHostedServiceOptions": {
+    "FileName": "aktabook-bus.pid"
   }
 }
