--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,6 +43,7 @@ jobs:
     env:
       AKTABOOK_ENVIRONMENT: Test
       AKTABOOK_INTEGRATION_TEST_ENVIRONMENT: Test
+      BUS_HOST_PID_FILE: src/Aktabook.Bus/bin/Release/net6.0/aktabook-bus.pid
       DOTNET_CLI_TELEMETRY_OPTOUT: true
       RequesterServiceBus__RabbitMQConnectionOptions__HostName: localhost
       RequesterServiceBus__RabbitMQConnectionOptions__Password: ${{ secrets.RABBITMQ_INTEGRATION_TEST_PASSWORD }}
@@ -127,8 +128,8 @@ jobs:
 
       - name: Create RabbitMQ virtual host
         env:
-          BUS_PASSWORD: ${{ secrets.RABBITMQ_INTEGRATION_TEST_PASSWORD }}
           BUS_USERNAME: ${{ secrets.RABBITMQ_INTEGRATION_TEST_USERNAME }}
+          BUS_PASSWORD: ${{ secrets.RABBITMQ_INTEGRATION_TEST_PASSWORD }}
         run: >-
           curl
           --data-urlencode
@@ -158,18 +159,27 @@ jobs:
           >> $GITHUB_ENV
 
       - name: Create NServiceBus delays
+        env:
+          BUS_USERNAME: ${{ secrets.RABBITMQ_INTEGRATION_TEST_USERNAME }}
+          BUS_PASSWORD: ${{ secrets.RABBITMQ_INTEGRATION_TEST_PASSWORD }}
         run: >-
           dotnet rabbitmq-transport
           delays create
           --connectionStringEnv RABBITMQ_CONNECTION_STRING
 
+          dotnet rabbitmq-transport
+          delays verify
+          --url http://localhost:15672
+          --username $BUS_USERNAME
+          --password $BUS_PASSWORD
+
       - name: Create NServiceBus BookInfoRequestEndpoint
         run: >-
           dotnet rabbitmq-transport
           endpoint create BookInfoRequestEndpoint
-          --auditQueueName aktabook_audit
+          --auditQueueName AuditQueue
           --connectionStringEnv RABBITMQ_CONNECTION_STRING
-          --errorQueueName aktabook_error
+          --errorQueueName ErrorQueue
           --queueType Quorum
           --routingTopology Conventional
           --useDurableEntities
@@ -227,6 +237,11 @@ jobs:
         env:
           PORT: 23514
         run: >-
+          x=1;
+          while [[ $x -le 30 && ! -f "$BUS_HOST_PID_FILE" ]];
+          do sleep $(( x++ ));
+          done
+
           nc -4 -d -i 1 -n -v -w 10 -z
           127.0.0.1 ${{ env.PORT }}
 
@@ -278,7 +293,7 @@ jobs:
       - name: Stop bus endpoint host
         run: >-
           pkill
-          --pidfile src/Aktabook.Bus/bin/Release/net6.0/aktabook-bus.pid
+          --pidfile $BUS_HOST_PID_FILE
           --signal SIGTERM
 
       - name: Stop code coverage collection server
