feat(bus): Add OpenTelemetry support

--- a/src/Aktabook.Bus/appsettings.json
+++ b/src/Aktabook.Bus/appsettings.json
@@ -60,5 +60,9 @@
   },
   "ProcessIdFileHostedServiceOptions": {
     "FileName": "aktabook-bus.pid"
+  },
+  "TelemetryOptions": {
+    "ServiceName": "Aktabook.Bus",
+    "ServiceVersion": "1.0.0"
   }
 }
