--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -23,6 +23,10 @@
     <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0"/>
     <PackageReference Include="NServiceBus.Router" Version="3.10.1"/>
     <PackageReference Include="NServiceBus.Serilog" Version="8.1.0"/>
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.1"/>
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.3.1"/>
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.6"/>
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.6"/>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0"/>
     <PackageReference Include="Serilog" Version="2.12.0"/>
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
@@ -35,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Aktabook.Diagnostics.OpenTelemetry\Aktabook.Diagnostics.OpenTelemetry.csproj"/>
     <ProjectReference Include="..\Aktabook.Application\Aktabook.Application.csproj"/>
     <ProjectReference Include="..\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
     <ProjectReference Include="..\Aktabook.Connectors.OpenLibrary\Aktabook.Connectors.OpenLibrary.csproj"/>
