--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,6 +15,9 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 env:
   INTEGRATION_TEST_RESULTS_DIR_NAME: integration_test_results
   UNIT_TEST_RESULTS_DIR_NAME: unit_test_results
