--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -20,6 +20,9 @@ on:
       - "src/**"
       - "test/**"
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Check .NET solution code style
