--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -12,21 +12,21 @@
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="6.0.2"/>
     <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1"/>
-    <PackageReference Include="NServiceBus" Version="7.7.4"/>
+    <PackageReference Include="NServiceBus" Version="7.8.0"/>
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0"/>
     <PackageReference Include="NServiceBus.Json" Version="2.0.0"/>
     <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="4.0.0"/>
-    <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.0"/>
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="7.0.3"/>
     <PackageReference Include="NServiceBus.Router" Version="3.10.1"/>
     <PackageReference Include="NServiceBus.Serilog" Version="8.1.0"/>
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.3.1"/>
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.3.1"/>
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.6"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.6"/>
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0-beta.1"/>
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0-beta.1"/>
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.7"/>
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.7"/>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0"/>
     <PackageReference Include="Serilog" Version="2.12.0"/>
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
