--- a/src/Aktabook.Data/Aktabook.Data.csproj
+++ b/src/Aktabook.Data/Aktabook.Data.csproj
@@ -8,8 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1"/>
   </ItemGroup>
 
   <ItemGroup>
