chore: Move project source to correct directory

--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -39,15 +39,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Aktabook.Diagnostics.OpenTelemetry\Aktabook.Diagnostics.OpenTelemetry.csproj"/>
     <ProjectReference Include="..\Aktabook.Application\Aktabook.Application.csproj"/>
     <ProjectReference Include="..\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
     <ProjectReference Include="..\Aktabook.Connectors.OpenLibrary\Aktabook.Connectors.OpenLibrary.csproj"/>
     <ProjectReference Include="..\Aktabook.Data\Aktabook.Data.csproj"/>
+    <ProjectReference Include="..\Aktabook.Diagnostics.HealthChecks\Aktabook.Diagnostics.HealthChecks.csproj"/>
+    <ProjectReference Include="..\Aktabook.Diagnostics.OpenTelemetry\Aktabook.Diagnostics.OpenTelemetry.csproj"/>
     <ProjectReference Include="..\Aktabook.Diagnostics.Process\Aktabook.Diagnostics.Process.csproj"/>
     <ProjectReference Include="..\Aktabook.Infrastructure.Configuration\Aktabook.Infrastructure.Configuration.csproj"/>
     <ProjectReference Include="..\Aktabook.Services.BookInfoRequestService\Aktabook.Services.BookInfoRequestService.csproj"/>
-    <ProjectReference Include="..\Aktabook.Diagnostics.HealthChecks\Aktabook.Diagnostics.HealthChecks.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
